[package]
name = "yacit"
version = "0.1.0"
edition = "2021"
description = "Yet Another Crappy ICMP Tunnel"
authors = ["Thomas Chevalier <thomas.chevalier@student-cs.fr>", "Pierre Méjane <pierre.mejane@student-cs.fr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.24.1"
libc = "0.2.126"
socket2 = { version = "0.4.4", features = ["all"] }
clap = { version ="3.1.18", features = ["derive"] }
pnet = "0.30.0"
neli = "0.6.1"